--- a/css/bootstrap-utilities.rtl.css
+++ b/css/bootstrap-utilities.rtl.css
@@ -11,7 +11,7 @@
 }
 
 .link-primary {
-  color: #0d6efd;
+  color: #4b9197
 }
 .link-primary:hover, .link-primary:focus {
   color: #0a58ca;
@@ -1242,7 +1242,7 @@
   white-space: nowrap !important;
 }
 .text-primary {
-  color: #0d6efd !important;
+  color: #4b9197 !important;
 }
 
 .text-secondary {
