--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,15 @@
     letter-spacing: 2px;
 }
 
-.logo img {
-    width: 70%;
+.logo-header img {
+    width: 30% !important; 
+    height: 30% !important;
+}
+
+.logo-footer img {
+    width: 40% !important; 
+    height: 40% !important;
+    margin:auto;
+    display:block;
+    
 }
