--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
+@font-face {
+    font-family: FontsFree-Net-RequestPersonalUse-axgZo;
+    src: url(font\FontsFree-Net-RequestPersonalUse-axgZo.ttf) format('truetype') !important;
+}
+
+
+
 /*** Navbar ***/
+
 .navbar .dropdown-toggle::after {
     border: none;
     content: "\f107";
-    font-family: "Font Awesome 5 Free";
+    font-family: FontsFree-Net-RequestPersonalUse-axgZo !important;
     font-weight: 900;
     vertical-align: middle;
     margin-left: 5px;
